# lazypoline

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  asm_syscall_hook.asm  bootstrap_runtime.cpp  config.h  gsreldata.h  lazypoline.cpp  lazypoline.h  main.cpp  nolibc_util.h  restore_selector_trampoline.asm  rigtorp_spinlock.h  setup_new_thread.cpp  signal_handlers.h  signals.h  sud.cpp  sud.h  syscall_names.c  util.h  vIrTuAlIzE_sIgNaLs.cpp  zpoline.cpp  zpoline.h
sysdeps/: kernel_sigaction.h
